--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'GR'
 - !lcsh 'Belgium -- Social life and customs'
 - !lcsh 'Netherlands -- Social life and customs'
+- GITenberg
 title: Nederlandsche Volkskunde
 url: http://www.gutenberg.org/ebooks/22968
